Fix z-index

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -29,7 +29,7 @@ $background-color: #EEEEEE;
     align-items: center;
     position: fixed;
     width: 100%;
-    z-index: 1000 !important;
+    z-index: 100;
 
     .page-title {
       font-size: 18px;
